Added to vercel

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Firebase secrets
+passion-pay-firebase-adminsdk-9856g-37329d3d45.json
+
 # dependencies
 /node_modules
 /.pnp
@@ -22,3 +25,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.vercel
